--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Asteroids</title>
 </head>
 <body>
-  
+  <section class="main-container">
+    <div class="game-title">
+        <h1>ASTEROIDS</h1>
+        <h2>PRESS SPACE TO PLAY</h2>
+    </div>
+  </section>
 </body>
 </html>
