--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   <title>Asteroids</title>
 </head>
 <body>
-  <section class="main-container">
-    <div class="game-title">
-        <h1>ASTEROIDS</h1>
-        <h2>PRESS SPACE TO PLAY</h2>
-    </div>
-  </section>
+  <canvas id="canvas" width="1024px" height="768px"></canvas>
+  <script src="./js/splash.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
