--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <canvas id="canvas" width="1024px" height="768px"></canvas>
+  <script src="./js/game.js"></script>
   <script src="./js/splash.js"></script>
   <script src="./js/main.js"></script>
 </body>
