--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <title>Asteroids</title>
 </head>
 <body>
-  <canvas id="canvas" width="1024px" height="768px"></canvas>
+  <section class="container">
+    <div class="canvas-container">
+      <canvas id="canvas" width="1024px" height="768px"></canvas>
+    </div>
+  </section>
+  
   <script src="./js/ship.js"></script>
   <script src="./js/render.js"></script>
   <script src="./js/game.js"></script>
