--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <canvas id="canvas" width="1024px" height="768px"></canvas>
     </div>
   </section>
-  
+  <script src="./js/asteroid.js"></script>
   <script src="./js/ship.js"></script>
   <script src="./js/render.js"></script>
   <script src="./js/game.js"></script>
