add bullet class

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <canvas id="canvas" width="1024px" height="768px"></canvas>
     </div>
   </section>
+  <script src="./js/bullet.js"></script>
   <script src="./js/asteroid.js"></script>
   <script src="./js/ship.js"></script>
   <script src="./js/render.js"></script>
